--- a/openfoam_cbp/src/components/topnav/topnav.css
+++ b/openfoam_cbp/src/components/topnav/topnav.css
@@ -3,7 +3,7 @@
     background-color: #333  !important;
     line-height: 1.4285em !important;
     font-size: 14px !important;
-    font-family: 'Lato','Helvetica Neue','Arial','Helvetica,sans-serif' !important;
+    font-family: 'Lato','Helvetica Neue','Arial','Helvetica,sans-serif', sans-serif !important;
     overflow: hidden !important;
   }
   
